# yew-template-for-github-io

./: Cargo.toml  README.md  frontend-2b6bdd2904fd6303.js  frontend-2b6bdd2904fd6303_bg.wasm  index.html  index.scss
.github/workflows/: pages.yml
src/: editor.rs  inst.rs  main.rs  parent.rs
