[package]
name = "dasha-showcase"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bhava = { git = "https://github.com/s1gtrap/bhava.git", branch = "main" }
dasha = { git = "https://github.com/s1gtrap/dasha.git", branch = "main" }
log = "0.4"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
web-sys = "0.3"
yew = "0.19"
yew-agent = "0.1"
